[package]
name = "ncmp-rust"
version = "0.1.0"
authors = ["Raghul <nanth.raghul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
crossterm = "0.19"
tui = { version = "0.14", default-features=false, features = ['crossterm'] }
mpd = "0.0.12"
